Windows11Style: Fix QSlider painting

Fix the QSlider painting:
 - don't cut off the handle when it is completly left or right
 - fix groove length calculation
 - make sure the groove is centered for dpr != 1.0
 - fix tickmark painting
 - remove unneeded paintings which do not follow the style (highlight in
   inner circle of the handle, highlight around the groove)
 - the handle has the same size for QT_SCALE_FACTOR != 1.0

Fixes: QTBUG-140649
Change-Id: Idc878c5858e0e72d750aeac437a16f2b7c3499b9
Reviewed-by: Wladimir Leuschner <wladimir.leuschner@qt.io>
(cherry picked from commit c0fb2f62f15acc56f8e536ac85691f062e5f413a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>